# niji-pallet-api

./: AGENTS.md  pyproject.toml
.codex/agents/: design.toml  implement-plan.toml  implementation.toml  intake.toml  quality-review.toml
.github/: copilot-instructions.md
.github/agents/: code-review.agent.md  python-test-agent.agent.md
.github/instructions/: fastapi.instructions.md
.github/prompts/: implement-plan.prompt.md
.github/skills/implement-plan/: SKILL.md
.github/skills/test-readme/: SKILL.md
docs/: openapi.yaml
docs/agents/reference/: architecture-guide.md  di-patterns.md  exception-strategy.md  openapi-integration.md  testing-strategy.md
docs/ai/: codex-migration-report.md  coding-instructions.md  project-instructions.md  review-instructions.md  testing-instructions.md
docs/ai/workflows/: design.md  implement-plan.md  implementation.md  intake.md  quality-review.md
src/: main.py
src/core/: providers.py
src/core/adapters/: __init__.py
src/core/adapters/inbound/: __init__.py  middleware.py
src/core/adapters/inbound/router/: __init__.py  _responses.py  get_liver.py  get_liver_color.py  list_livers.py  search_livers.py
src/core/adapters/outbound/: __init__.py
src/core/adapters/outbound/sqlalchemy/: __init__.py  database.py  liver_repository.py  models.py
src/core/application/: __init__.py
src/core/application/ports/: __init__.py
src/core/application/ports/outbound/: __init__.py  (+1 more)
src/core/application/usecases/: __init__.py  get_liver.py  get_liver_color.py  list_livers.py  search_livers.py
src/core/domain/: __init__.py
src/core/domain/entities/: __init__.py  liver.py
src/core/shared/: __init__.py  exceptions.py  logger.py  request_context.py  settings.py
tests/: __init__.py
tests/integration/: __init__.py
tests/integration/core/: __init__.py
tests/integration/core/adapters/: __init__.py
tests/unit/: README.md  __init__.py
tests/unit/core/: README.md  __init__.py  test_providers.py
tests/unit/core/adapters/: __init__.py
tests/unit/core/application/: __init__.py
tests/unit/core/shared/: README.md  test_logger.py  test_settings.py
(+28 files in other folders)
